[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/Soda.gd" type="Script" id=1]
[ext_resource path="res://sprites/refri-export.png" type="Texture" id=2]
[ext_resource path="res://sounds/item ruim (1).ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 61.5, 78.5 )

[node name="Soda" type="Area2D"]
position = Vector2( 0, -5 )
script = ExtResource( 1 )

[node name="SodaSprite" type="Sprite" parent="."]
position = Vector2( -98, 268 )
scale = Vector2( 1.03, 1.03 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 11, 5 )
shape = SubResource( 1 )

[node name="CollectedSoundBad" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 15.0

[connection signal="body_entered" from="." to="." method="_on_Soda_body_entered"]
